syntax = "proto3";

package discord;

option go_package = "github.com/area/grpc-go/service";

service DiscordService {
  rpc CreateMessage(CreateMsg) returns(CreateMsg) {}

  rpc EditMessage(EditMsg) returns(EditMsg) {}

  rpc DeleteMessage(DeleteMsg) returns(DeleteMsg) {}

  rpc CreateReaction(CreateReact) returns(CreateReact) {}

  rpc DeleteAllReactions(DeleteAllReact) returns(DeleteAllReact) {}

  rpc DeleteReactions(DeleteReact) returns(DeleteReact) {}

  rpc DeactivateAction(DeactivateDiscord) returns (DeactivateDiscord) {}
}

message CreateMsg {
  string channel = 1;
  string content = 2;
}

message EditMsg {
  string channel = 1;
  string message_id = 2;
  string content = 3;
}

message DeleteMsg {
  string channel = 1;
  string message_id = 2;
}

message CreateReact {
  string channel = 1;
  string message_id = 2;
  string emoji = 3;
}

message DeleteAllReact {
  string channel = 1;
  string message_id = 2;
}

message DeleteReact {
  string channel = 1;
  string message_id = 2;
  string emoji = 3;
}

message DeactivateDiscord {
  uint32 action_id = 1;
}
